# serializer version: 1
# name: test_snapshot_container
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Wallapop
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
    ↪︎ Wrapper: Synology DS220\+ NAS
    ↪︎ Extracted: WD Red Plus 4TB drives
  _WD Red Plus 4TB at 55€ — strong match\._
  🔍 Confidence: high
  '''
# ---
# name: test_snapshot_direct
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Wallapop
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
  _WD Red Plus 4TB at 55€ — strong match\._
  🔍 Confidence: high
  '''
# ---
# name: test_snapshot_long_llm_take
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Wallapop
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
  _Coincide con el modelo del wishlist \(WD Red Plus 4TB, ref WD40EFPX\) y el precio está claramente por debajo de mercado; descripción menciona uso intensivo en NAS — riesgo de SMART degradado, pero el precio compensa para un homelab\._
  🔍 Confidence: high
  '''
# ---
# name: test_snapshot_low_confidence
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Wallapop
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
  _Title hints at WD Red, ref not visible — uncertain\._
  🔍 Confidence: low
  '''
# ---
# name: test_snapshot_missing_photo
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Wallapop
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
  _WD Red Plus 4TB at 55€ — strong match\._
  🔍 Confidence: high
  '''
# ---
# name: test_snapshot_special_chars_in_title
  '''
  📦 *WD\_Red\+Plus \*4TB\* \(ref\!\)* — *55,00 €*
  📍 L'Hospitalet de Llobregat · Wallapop
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
  _100% match: title\=ref\. Price < 60€\!_
  🔍 Confidence: high
  '''
# ---
# name: test_snapshot_with_comps
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Wallapop
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
  _WD Red Plus 4TB at 55€ — strong match\._
  🔍 Confidence: high
  💬 Comps \(3 reservados\): 180,00 – 240,00 € · mediana 200,00 €
  '''
# ---
# name: test_snapshot_with_cost
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Wallapop
  💶 55,00 \+ 3,50 envío \(est\.\) \+ 4,82 Protección \= 63,32 €
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
  _WD Red Plus 4TB at 55€ — strong match\._
  🔍 Confidence: high
  '''
# ---
# name: test_snapshot_with_import
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Ebay
  💶 55,00 \+ 16,82 envío \+ 3,63 importación \(est\.\) \= 75,45 €
  🔗 [Ver anuncio en Ebay](https://www.ebay.es/itm/123456)
  _WD Red Plus 4TB at 55€ — strong match\._
  🔍 Confidence: high
  '''
# ---
# name: test_snapshot_with_single_comp
  '''
  📦 *WD Red Plus 4TB \(WD40EFPX\)* — *55,00 €*
  📍 Madrid · Wallapop
  🔗 [Ver anuncio en Wallapop](https://wallapop.com/item/abc123)
  _WD Red Plus 4TB at 55€ — strong match\._
  🔍 Confidence: high
  💬 Comps \(1 reservados\): 200,00 – 200,00 € · mediana 200,00 €
  '''
# ---
